complite the project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>TFC | Tendered Fried Checken</title>
     <link rel="icon" href="./img/logo.png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/fontawesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css">
 </head>
+
 
 <body>
     <!--NAVBAR-Start-->
@@ -31,17 +34,17 @@
             </span>
         </div>
         <ul class="nav-items">
-            <li><a href="#" class="nav-link">home</a></li>
-            <li><a href="#" class="nav-link">features</a></li>
-            <li><a href="#" class="nav-link">about</a></li>
-            <li><a href="#" class="nav-link">product</a></li>
-            <li><a href="#" class="nav-link">Contact</a></li>
+            <li><a href="#banner" class="nav-link">home</a></li>
+            <li><a href="#features" class="nav-link">features</a></li>
+            <li><a href="#about" class="nav-link">about</a></li>
+            <li><a href="#product" class="nav-link">product</a></li>
+            <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
 
     </nav>
     <!--NAVBAR END-->
     <!-- ------------banner---------- -->
-    <div class="banner">
+    <div class="banner" id="banner">
         <header class="header">
             <h2>Discover the secret to taste</h2>
             <h1>Tender Fried Checken</h1>
@@ -49,9 +52,9 @@
         </header>
         <div class="banner-main"></div>
     </div>
-    <div class="divided"></div>
+    <div class="divided" id="divided"></div>
     <!----------features start-------------->
-    <div class="features clear-fix">
+    <div class="features clear-fix" id="features">
         <div class="features--one">
             <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px" fill="#333">
                 <path
@@ -87,7 +90,7 @@
     </div>
     <!----------features end-------------->
     <!-- ---------------about start-------------------------->
-    <div class="about clear-fix">
+    <div class="about clear-fix" id="about">
         <div class="about--img">
             <img src="./img/a1.jpg" alt="" class="about--img--main">
         </div>
@@ -100,6 +103,159 @@
                 and busness travelers,ensoreing every guest enjoys seamless and enjoys a seamless and enjoyable
                 experiance</p>
             <a href="#">learn more</a>
+        </div>
+
+    </div>
+    <!-- ------------------protuct------------------ -->
+    <div class="product clear-fix" id="product">
+        <div class="product--element">
+            <div class="product--content ">
+                <h2>checkout</h2>
+                <h3>our recipe</h3>
+                <p>discover a haven of luxury and relexation in our menticulously disingned rooms and suites,ensuring a
+                    several and memorable stay.our hotel combines modern elegance with personalized service,offering
+                    amenties tailored to both lessiue
+                    and busness travelers,ensoreing every guest enjoys seamless and enjoys a seamless and enjoyable
+                    experiance</p>
+                <a href="#">learn more</a>
+
+            </div>
+            <div class="product--img clear-fix">
+                <div class="product--img--main">
+                    <img src="./img/p1.jpg" alt="">
+                    <h3>Checken Leg peace</h3>
+                    <h4>₹100</h4>
+
+                </div>
+                <div class="product--img--main ">
+                    <img src="./img/p2.jpg" alt="">
+                    <h3>Checken curry</h3>
+                    <h4>₹150</h4>
+
+                </div>
+                <div class="product--img--main">
+                    <img src="./img/p3.jpg" alt="">
+                    <h3>Checken Thanduri</h3>
+                    <h4>₹350</h4>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- --------------our service------------------- -->
+    <div class="service clear-fix " id="service">
+        <div class="service--header">
+            <h3>Explore</h3>
+            <h2>our service</h2>
+        </div>
+        <div class="service--info">
+            <div class="service--info--main--1">
+                <img src="/img/s1.jpg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
+                    fill="#e8eaed">
+                    <path
+                        d="M640-80q-100 0-170-70t-70-170q0-100 70-170t170-70q100 0 170 70t70 170q0 100-70 170T640-80Zm0-80q66 0 113-47t47-113q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 66 47 113t113 47Zm-480 0q-33 0-56.5-23.5T80-240v-304q0-8 1.5-16t4.5-16l80-184h-6q-17 0-28.5-11.5T120-800v-40q0-17 11.5-28.5T160-880h280q17 0 28.5 11.5T480-840v40q0 17-11.5 28.5T440-760h-6l66 152q-19 10-36 21t-32 25l-84-198h-96l-92 216v304h170q5 21 13.5 41.5T364-160H160Zm480-440q-42 0-71-29t-29-71q0-42 29-71t71-29v200q0-42 29-71t71-29q42 0 71 29t29 71H640Z" />
+                </svg>
+                <div class="service--info--main--1--element">
+                    <h3>Custom Recipe</h3>
+                    <p>experiance our menu items craft with pasanate in work and good taste </p>
+                    <a href="#">Read more</a>
+                </div>
+            </div>
+            <div class="service--info--main--1">
+                <img src="/img/s3.jpg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
+                    fill="#e8eaed">
+                    <path
+                        d="M680-600h80v-80h-80v80Zm0 160h80v-80h-80v80Zm0 160h80v-80h-80v80Zm0 160v-80h160v-560H480v56l-80-58v-78h520v720H680Zm-640 0v-400l280-200 280 200v400H360v-200h-80v200H40Zm80-80h80v-200h240v200h80v-280L320-622 120-480v280Zm560-360ZM440-200v-200H200v200-200h240v200Z" />
+                </svg>
+                <div class="service--info--main--1--element">
+                    <h3>home</h3>
+                    <p>Delivery the your home at a time </p>
+                    <a href="#">read more</a>
+                </div>
+            </div>
+            <div class="service--info--main--1">
+                <img src="/img/s2.jpg" alt="">
+                <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
+                    fill="#e8eaed">
+                    <path
+                        d="m480-840 440 330-48 64-72-54v380H160v-380l-72 54-48-64 440-330ZM294-478q0 53 57 113t129 125q72-65 129-125t57-113q0-44-30-73t-72-29q-26 0-47.5 10.5T480-542q-15-17-37.5-27.5T396-580q-42 0-72 29t-30 73Zm426 278v-360L480-740 240-560v360h480Zm0 0H240h480Z" />
+                </svg>
+
+                <div class="service--info--main--1--element">
+                    <h3>Tender Checken</h3>
+                    <p>This is the dish highly recommented by Customer and good at taste</p>
+                    <a href="#">read more</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+    <!-- -----------------contact--------------------------- -->
+    <div class="contact clear-fix" id="contact">
+        <div class="content--all">
+        <div class="contact--detail">
+            <div class="contact--detail--info clear-fix">
+                <div class="contact--detail--info--title ">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
+                    fill="#e8eaed">
+                    <path
+                        d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z" />
+                </svg>
+                <h4>Address</h4>
+            </div>
+                <p>123,street,Madurai,Tamilnadu<br>
+                    Pincode-600103.</p>
+                
+            </div>
+            <div class="contact--detail--info">
+                <div class="contact--detail--info--title">
+                <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
+                    fill="#e8eaed">
+                    <path
+                        d="M160-160q-33 0-56.5-23.5T80-240v-480q0-33 23.5-56.5T160-800h640q33 0 56.5 23.5T880-720v480q0 33-23.5 56.5T800-160H160Zm320-280L160-640v400h640v-400L480-440Zm0-80 320-200H160l320 200ZM160-640v-80 480-400Z" />
+                </svg>
+                <h4>Mail</h4>
+            </div>
+                <p>tamilgameryt@gmail.com</p>
+            </div>
+            <div class="contact--detail--info">
+                <div class="contact--detail--info--title">
+                <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px"
+                    fill="#e8eaed">
+                    <path
+                        d="M798-120q-125 0-247-54.5T329-329Q229-429 174.5-551T120-798q0-18 12-30t30-12h162q14 0 25 9.5t13 22.5l26 140q2 16-1 27t-11 19l-97 98q20 37 47.5 71.5T387-386q31 31 65 57.5t72 48.5l94-94q9-9 23.5-13.5T670-390l138 28q14 4 23 14.5t9 23.5v162q0 18-12 30t-30 12ZM241-600l66-66-17-94h-89q5 41 14 81t26 79Zm358 358q39 17 79.5 27t81.5 13v-88l-94-19-67 67ZM241-600Zm358 358Z" />
+                </svg>
+                <h4>Telephone</h4>
+            </div>
+                <p>+91 9876543210</p>
+            </div>
+        </div>
+        <div class="content--form">
+            <div class="content--form--info">
+            <h3>Contact us</h3>
+            <form action="">
+                <input type="text" placeholder="Name"><br>
+                <input type="email" placeholder="Email"><br>
+                <textarea class="textarea--from" id="" placeholder="Message"></textarea>
+                <button>Submit</button>
+            </form>
+        </div>
+        </div>
+    </div>
+
+    </div>
+    <div class="footer clear-fix" id="footer">
+        <h1></h1>
+        <div class="footer--icon">
+            <a href="#"><i class="fa-brands fa-instagram" style="color: #ffffff;"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook" style="color: #ffffff;"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube" style="color: #ffffff;"></i></a>
+        </div>
+        <div class="footer--info">
+            <h3>&copy;<span class="company">TFC NATION</span>  All right is reserved</h3>
         </div>
 
     </div>
