complite the project

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         </div>
         <div class="service--info">
             <div class="service--info--main--1">
-                <img src="/img/s1.jpg" alt="">
+                <img src="./img/s3.jpg" alt="">
                 <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
                     fill="#e8eaed">
                     <path
@@ -164,7 +164,7 @@
                 </div>
             </div>
             <div class="service--info--main--1">
-                <img src="/img/s3.jpg" alt="">
+                <img src="./img/s1.jpg" alt="">
                 <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
                     fill="#e8eaed">
                     <path
@@ -173,11 +173,11 @@
                 <div class="service--info--main--1--element">
                     <h3>home</h3>
                     <p>Delivery the your home at a time </p>
-                    <a href="#">read more</a>
+                    <a href="#">Read more</a>
                 </div>
             </div>
             <div class="service--info--main--1">
-                <img src="/img/s2.jpg" alt="">
+                <img src="./img/s2.jpg" alt="">
                 <svg xmlns="http://www.w3.org/2000/svg" height="60px" viewBox="0 -960 960 960" width="60px"
                     fill="#e8eaed">
                     <path
@@ -187,7 +187,7 @@
                 <div class="service--info--main--1--element">
                     <h3>Tender Checken</h3>
                     <p>This is the dish highly recommented by Customer and good at taste</p>
-                    <a href="#">read more</a>
+                    <a href="#">Read more</a>
                 </div>
             </div>
         </div>
